@@ -7,6 +7,9 @@
 Features
 --------
 
+- Using the parameter "propagating/orbitalfixing/enableafterrestart" one can now decide to recompute symmetries after a
+  restart or not. Previously one could just turn off symmetry computation after a restart.
+
 Performance improvements
 ------------------------
 
@@ -27,6 +30,8 @@ Interface changes
 ### Interfaces to external software
 
 ### Changed parameters
+
+- renamed parameter "propagating/orbitalfixing/enableafterrestart" to ".../recomputerestart"
 
 ### New parameters
 
